RV House change log
Version 0.93.4 (XX.09.2011)
- Selecting text in chat automatically copies to clipboard
- New RVZ registration limits
- Fixed ordering status (Chatting, Away ...) in users view
- Fixed Settings/advanced to show the command-line
 
Version 0.93.3 (4.07.2011)
- Fix: Close main window closes RV House, even if private message windows open
- Fix: users with both P2P / server connection should appear dark blue
- Fix: Message field keeps focus
- Workaround: selected user can be deselected by clicking playing status
- Italian translation
- Sensible defaults for room column widths
- Dutch translation

Version 0.93.2 (2.07.2011)
- Fix: number of players not written to RV registry to avoid crashes when more than 12 players
- Fix: Double clicking on user sections crashed RV House
- Fix: Room settings selecting "All versions" did not return number of players to maximum 12
- Fix: Input focus in main window/private message/room window is initialized to the chat input
- Bulgarian translation removed, until someone fixes it, as it doesn't work in new RV House version
- Fix: If a language is selected that doesn't exist anymore, language selection is displayed.
- Fix: Correct title on main window
- Fix: Only one instance of RV House can be launched

Version 0.93.1 (29.06.2011)
- Fix: non-english language files fixed
- Fix: crash when trying to join room when none selected
- If Re-Volt 1.2 selected, up-to 16 players possible

Version 0.93.0 (28.06.2011)
- UI improvements (Using Qt GUI toolkit)

Version 0.92.3 (23.04.2011)
- Advanced setting for joining started races (RV 1.2 support)
- Bulgarian translations

Version 0.92.2 (25.03.2011)
- Fixed RV 1.2 specific room settings

Version 0.92.1 (25.03.2011)
- Track sharing button removed.
- Support for Re-Volt 1.2 specific room settings.
- RV's command-line used by DirectLobby is restored to its original value after launching RV.

Version 0.92.0 (19.03.2011)